# seznam

./: .env  README.md  docker-compose.yaml
backend-service/: Dockerfile  pyproject.toml
backend-service/.devcontainer/: devcontainer.json
backend-service/seznam/seznam_django/: celerybeat-schedule  manage.py
backend-service/seznam/seznam_django/seznam_django/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend-service/seznam/seznam_django/videos/: models.py  serializers.py  tasks.py  test_data.json  tests.py  urls.py  views.py
backend-service/seznam/seznam_django/videos/lib/: api_fetch.py
backend-service/seznam/seznam_django/videos/management/commands/: fetch_data.py
backend-service/seznam/seznam_django/videos/migrations/: 0001_initial.py  0002_fetchmetadata.py  0003_drm_feature_metadata_delete_video.py  0004_metadata_videos_meta_name_804f5c_idx_and_more.py  0005_metadata_videos_meta_is_feat_b26fc2_idx.py
backend-service/seznam/seznam_django/videos/templates/videos/: base.html  detail.html  index.html
db-service/: Dockerfile  initialize_seznam.sh
frontend-service/: Dockerfile
frontend-service/svelte/: package-lock.json  package.json
frontend-service/svelte/.devcontainer/: devcontainer.json
frontend-service/svelte/src/routes/: +page.svelte  +page.ts
frontend-service/svelte/src/routes/[id]/: +page.svelte  +page.ts
